# inferops

./: .dockerignore  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  go.mod  go.sum  requirements-dev.txt
cli/: pyproject.toml
cli/inferops_cli/: __init__.py  activate.py  app_loader.py  cache.py  cache_install.py  cache_safety.py  cluster_resources.py  contracts.py  deactivate.py  delete.py  deploy.py  deploy_endpoints.py  destroy.py  diagnose.py  diagnostic_helpers.py  doctor.py  endpoints.py  errors.py  gateway.py  generate.py  gpu.py  helm.py  init.py  install.py  k8s_client.py  kube.py  lifecycle.py  logs.py  main.py  models.py  observability.py  options.py  output.py  parser.py  serve.py  state.py  status.py  uninstall.py  upgrade.py
cli/inferops_cli/charts/inferops-dashboard/: Chart.yaml  values.yaml
cli/inferops_cli/charts/inferops-dashboard/templates/: deployment.yaml  rbac.yaml  service.yaml
cli/inferops_cli/charts/inferops-gateway/: values.yaml
cli/inferops_cli/charts/inferops-gateway/templates/: deployment.yaml  httproute.yaml  ingress.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml  tailscale-ingress.yaml
cli/inferops_cli/charts/inferops-operator/: Chart.yaml  values-homelab.yaml  values.yaml
cli/inferops_cli/charts/inferops-operator/crds/: modelcaches.yaml  modeldeployments.yaml
cli/inferops_cli/charts/inferops-operator/templates/: _helpers.tpl  dashboard-platform.yaml  deployment.yaml  diagnostics-configmap.yaml  metrics-service.yaml  modelruntime.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  rbac.yaml  (+2 more)
docs/: build.md  (+19 more)
(+223 files in other folders)
