[project]
name = "inferops-cli"
version = "0.0.0"
description = "CLI for deploying inference runtimes to Kubernetes."
requires-python = ">=3.10"
dependencies = ["PyYAML>=6,<7"]

[project.scripts]
inferops = "inferops_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
